--- a/src/MasterChef/register/register.css
+++ b/src/MasterChef/register/register.css
@@ -4,6 +4,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
+
+    .success-msg {
+      color: green;
+    }
   
     .card {
       width: 50%;
@@ -63,7 +67,7 @@
           flex-direction: column;
           gap: 30px;
           
-          input {
+          input, select {
           border: none;
           border-bottom: 1px solid lightgray;
           padding: 20px 10px;
@@ -77,6 +81,23 @@
             color: white;
             font-weight: bold;
             cursor: pointer;
+          }
+
+          .radio-container {
+            display: flex;
+            justify-content: flex-start; 
+            gap: 20px; 
+          }
+          
+          .radio-container label {
+            display: flex;
+            align-items: center; 
+            font-size: 18px;
+            gap: 5px;
+          }
+          
+          input[type="radio"] {
+            margin: 0;
           }
         }
       }
